--- a/tokens/application.json
+++ b/tokens/application.json
@@ -230,6 +230,50 @@
             "type": "dimension"
           }
         }
+      },
+      "status": {
+        "height": {
+          "sm": {
+            "value": "{app.dimension.status.height.md} - 0.0625rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.status.height}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.status.height.md} + 0.0625rem",
+            "type": "dimension"
+          }
+        },
+        "radius": {
+          "sm": {
+            "value": "{app.dimension.status.radius.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.status.radius}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.status.radius.md} + 0.125rem",
+            "type": "dimension"
+          }
+        },
+        "border": {
+          "sm": {
+            "value": "1px",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "1px",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "1px",
+            "type": "dimension"
+          }
+        }
       }
     },
     "color": {
