--- a/tokens/config.json
+++ b/tokens/config.json
@@ -135,8 +135,9 @@
           "type": "dimension"
         },
         "radius": {
-          "value": "0.125rem",
-          "type": "dimension"
+          "value": "0rem",
+          "type": "dimension",
+          "description": "Change value to 0.125rem to make it round."
         }
       }
     },
