--- a/tokens/config.json
+++ b/tokens/config.json
@@ -129,7 +129,7 @@
           "type": "dimension"
         }
       },
-      "status": {
+      "dot": {
         "height": {
           "value": "0.5rem",
           "type": "dimension"
@@ -138,6 +138,14 @@
           "value": "0rem",
           "type": "dimension",
           "description": "Change value to 0.125rem to make it round."
+        },
+        "border": {
+          "value": "0.0625rem",
+          "type": "dimension"
+        },
+        "step": {
+          "value": "0.0625rem",
+          "type": "dimension"
         }
       }
     },
