--- a/tokens/application.json
+++ b/tokens/application.json
@@ -231,70 +231,70 @@
           }
         }
       },
-      "status": {
+      "dot": {
         "height": {
           "xs": {
-            "value": "{app.dimension.status.height.sm} - 0.0625rem",
+            "value": "{app.dimension.dot.height.sm} - 0.0625rem",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.status.height.md} - 0.0625rem",
+            "value": "{app.dimension.dot.height.md} - 0.0625rem",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.status.height}",
+            "value": "{config.dimension.dot.height}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.status.height.md} + 0.0625rem",
+            "value": "{app.dimension.dot.height.md} + 0.0625rem",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.status.height.lg} + 0.0625rem",
+            "value": "{app.dimension.dot.height.lg} + 0.0625rem",
             "type": "dimension"
           }
         },
         "radius": {
           "xs": {
-            "value": "{app.dimension.status.height.xs} / 2 - {config.dimension.status.radius}",
+            "value": "{app.dimension.dot.height.xs} / 2 - {config.dimension.dot.radius}",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.status.height.sm} / 2 - {config.dimension.status.radius}",
+            "value": "{app.dimension.dot.height.sm} / 2 - {config.dimension.dot.radius}",
             "type": "dimension"
           },
           "md": {
-            "value": "{app.dimension.status.height.md} / 2 - {config.dimension.status.radius}",
+            "value": "{app.dimension.dot.height.md} / 2 - {config.dimension.dot.radius}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.status.height.lg} / 2 - {config.dimension.status.radius}",
+            "value": "{app.dimension.dot.height.lg} / 2 - {config.dimension.dot.radius}",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.status.height.xl} / 2 - {config.dimension.status.radius}",
+            "value": "{app.dimension.dot.height.xl} / 2 - {config.dimension.dot.radius}",
             "type": "dimension"
           }
         },
         "border": {
           "xs": {
-            "value": "1px",
+            "value": "{config.dimension.dot.border}",
             "type": "dimension"
           },
           "sm": {
-            "value": "1px",
+            "value": "{config.dimension.dot.border}",
             "type": "dimension"
           },
           "md": {
-            "value": "1px",
+            "value": "{config.dimension.dot.border}",
             "type": "dimension"
           },
           "lg": {
-            "value": "1px",
+            "value": "{config.dimension.dot.border}",
             "type": "dimension"
           },
           "xl": {
-            "value": "1px",
+            "value": "{config.dimension.dot.border}",
             "type": "dimension"
           }
         }
