--- a/tokens/application.json
+++ b/tokens/application.json
@@ -865,6 +865,10 @@
     "fontSize": {
       "control": {
         "text": {
+          "xs": {
+            "value": "{app.fontSize.control.text.sm} - 0.125rem",
+            "type": "fontSizes"
+          },
           "sm": {
             "value": "{app.fontSize.control.text.md} - 0.125rem",
             "type": "fontSizes"
@@ -876,9 +880,17 @@
           "lg": {
             "value": "{app.fontSize.control.text.md} + 0.125rem",
             "type": "fontSizes"
+          },
+          "xl": {
+            "value": "{app.fontSize.control.text.lg} + 0.125rem",
+            "type": "fontSizes"
           }
         },
         "symbol": {
+          "xs": {
+            "value": "{app.fontSize.control.symbol.sm} - 0.125rem",
+            "type": "fontSizes"
+          },
           "sm": {
             "value": "{app.fontSize.control.symbol.md} - 0.125rem",
             "type": "fontSizes"
@@ -890,11 +902,19 @@
           "lg": {
             "value": "{app.fontSize.control.symbol.md} + 0.125rem",
             "type": "fontSizes"
+          },
+          "xl": {
+            "value": "{app.fontSize.control.symbol.lg} + 0.125rem",
+            "type": "fontSizes"
           }
         }
       },
       "label": {
         "text": {
+          "xs": {
+            "value": "{app.fontSize.label.text.sm} - 0.0625rem",
+            "type": "fontSizes"
+          },
           "sm": {
             "value": "{app.fontSize.label.text.md} - 0.0625rem",
             "type": "fontSizes"
@@ -906,9 +926,17 @@
           "lg": {
             "value": "{app.fontSize.label.text.md} + 0.0625rem",
             "type": "fontSizes"
+          },
+          "xl": {
+            "value": "{app.fontSize.label.text.lg} + 0.0625rem",
+            "type": "fontSizes"
           }
         },
         "symbol": {
+          "xs": {
+            "value": "{app.fontSize.label.symbol.sm} - 0.0625rem",
+            "type": "fontSizes"
+          },
           "sm": {
             "value": "{app.fontSize.label.symbol.md} - 0.0625rem",
             "type": "fontSizes"
@@ -919,6 +947,10 @@
           },
           "lg": {
             "value": "{app.fontSize.label.symbol.md} + 0.0625rem",
+            "type": "fontSizes"
+          },
+          "xl": {
+            "value": "{app.fontSize.label.symbol.lg} + 0.0625rem",
             "type": "fontSizes"
           }
         }
