--- a/tokens/config.json
+++ b/tokens/config.json
@@ -105,6 +105,10 @@
         "symbol": {
           "value": "1.125rem",
           "type": "dimension"
+        },
+        "border": {
+          "value": "0.125rem",
+          "type": "dimension"
         }
       },
       "label": {
@@ -140,7 +144,7 @@
           "description": "Change value to 0.125rem to make it round."
         },
         "border": {
-          "value": "0.0625rem",
+          "value": "0.125rem",
           "type": "dimension"
         },
         "step": {
