--- a/tokens/application.json
+++ b/tokens/application.json
@@ -199,6 +199,10 @@
             "value": "{app.dimension.label.height.md} - 0.25rem",
             "type": "dimension"
           },
+          "xs": {
+            "value": "{app.dimension.label.height.sm} - 0.25rem",
+            "type": "dimension"
+          },
           "md": {
             "value": "{config.dimension.label.height}",
             "type": "dimension"
@@ -206,11 +210,19 @@
           "lg": {
             "value": "{app.dimension.label.height.md} + 0.25rem",
             "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.height.lg} + 0.25rem",
+            "type": "dimension"
           }
         },
         "padding": {
           "sm": {
             "value": "{app.dimension.label.padding.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "xs": {
+            "value": "{app.dimension.label.padding.sm} - 0.125rem",
             "type": "dimension"
           },
           "md": {
@@ -220,11 +232,19 @@
           "lg": {
             "value": "{app.dimension.label.padding.md} + 0.125rem",
             "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.padding.lg} + 0.125rem",
+            "type": "dimension"
           }
         },
         "gap": {
           "sm": {
             "value": "{app.dimension.label.gap.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "xs": {
+            "value": "{app.dimension.label.gap.sm} - 0.125rem",
             "type": "dimension"
           },
           "md": {
@@ -234,11 +254,19 @@
           "lg": {
             "value": "{app.dimension.label.gap.md} + 0.125rem",
             "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.gap.lg} + 0.125rem",
+            "type": "dimension"
           }
         },
         "radius": {
           "sm": {
             "value": "{app.dimension.label.radius.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "xs": {
+            "value": "{app.dimension.label.radius.sm} - 0.125rem",
             "type": "dimension"
           },
           "md": {
@@ -248,19 +276,31 @@
           "lg": {
             "value": "{app.dimension.label.radius.md} + 0.125rem",
             "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.radius.lg} + 0.125rem",
+            "type": "dimension"
           }
         },
         "border": {
           "sm": {
-            "value": "1px",
+            "value": "{config.dimension.label.border}",
+            "type": "dimension"
+          },
+          "xs": {
+            "value": "{config.dimension.label.border}",
             "type": "dimension"
           },
           "md": {
-            "value": "1px",
+            "value": "{config.dimension.label.border}",
             "type": "dimension"
           },
           "lg": {
-            "value": "1px",
+            "value": "{config.dimension.label.border}",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{config.dimension.label.border}",
             "type": "dimension"
           }
         },
@@ -269,12 +309,20 @@
             "value": "{app.dimension.label.symbol.md} - 0.125rem",
             "type": "dimension"
           },
+          "xs": {
+            "value": "{app.dimension.label.symbol.sm} - 0.125rem",
+            "type": "dimension"
+          },
           "md": {
             "value": "{config.dimension.label.symbol}",
             "type": "dimension"
           },
           "lg": {
             "value": "{app.dimension.label.symbol.md} + 0.125rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.symbol.lg} + 0.125rem",
             "type": "dimension"
           }
         }
