--- a/tokens/config.json
+++ b/tokens/config.json
@@ -131,6 +131,10 @@
         "symbol": {
           "value": "1.125rem",
           "type": "dimension"
+        },
+        "border": {
+          "value": "0.125rem",
+          "type": "dimension"
         }
       },
       "dot": {
