--- a/tokens/application.json
+++ b/tokens/application.json
@@ -918,6 +918,15 @@
           },
           "type": "typography"
         },
+        "initials": {
+          "value": {
+            "fontFamily": "{config.fontFamily.uiAlt}",
+            "fontWeight": "{config.fontWeight.medium}",
+            "lineHeight": "120%",
+            "fontSize": "{config.fontSize.control}"
+          },
+          "type": "typography"
+        },
         "symbol": {
           "value": {
             "fontFamily": "{config.fontFamily.symbol}",
@@ -939,6 +948,15 @@
           "type": "typography"
         },
         "number": {
+          "value": {
+            "fontFamily": "{config.fontFamily.uiAlt}",
+            "fontWeight": "{config.fontWeight.medium}",
+            "lineHeight": "100%",
+            "fontSize": "{config.fontSize.label}"
+          },
+          "type": "typography"
+        },
+        "initials": {
           "value": {
             "fontFamily": "{config.fontFamily.uiAlt}",
             "fontWeight": "{config.fontWeight.medium}",
