--- a/tokens/application.json
+++ b/tokens/application.json
@@ -591,6 +591,12 @@
             "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.1)",
             "type": "color"
           }
+        },
+        "dimmer": {
+          "default": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.1)",
+            "type": "color"
+          }
         }
       },
       "component": {
