--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1095,6 +1095,10 @@
         "number": {
           "value": "2%",
           "type": "letterSpacing"
+        },
+        "initials": {
+          "value": "8%",
+          "type": "letterSpacing"
         }
       },
       "label": {
@@ -1103,6 +1107,10 @@
           "type": "letterSpacing"
         },
         "number": {
+          "value": "8%",
+          "type": "letterSpacing"
+        },
+        "initials": {
           "value": "8%",
           "type": "letterSpacing"
         }
