--- a/tokens/config.json
+++ b/tokens/config.json
@@ -145,7 +145,7 @@
         "radius": {
           "value": "0rem",
           "type": "dimension",
-          "description": "Change value to 0.125rem to make it round."
+          "description": "Change value to 0.125rem to make it more square."
         },
         "border": {
           "value": "0.125rem",
