--- a/tokens/application.json
+++ b/tokens/application.json
@@ -578,7 +578,7 @@
             "type": "color"
           },
           "inverted": {
-            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, 1)",
+            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)",
             "type": "color"
           },
           "link": {
