--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1174,9 +1174,22 @@
               "x": "0",
               "y": "0",
               "blur": "0",
+              "spread": "0.25rem",
+              "color": "{app.color.component.focus.focusRing.default}",
+              "type": "dropShadow"
+            }
+          ],
+          "type": "boxShadow"
+        },
+        "border": {
+          "value": [
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
               "spread": "2px",
               "color": "{app.color.component.focus.border.default}",
-              "type": "innerShadow"
+              "type": "dropShadow"
             },
             {
               "x": "0",
