--- a/tokens/config.json
+++ b/tokens/config.json
@@ -411,7 +411,7 @@
             "type": "other"
           },
           "focusRing": {
-            "value": "{config.color.info.alpha.active} + 0.1",
+            "value": "{config.color.info.alpha.active} - 0.1",
             "type": "other"
           }
         },
