--- a/tokens/config.json
+++ b/tokens/config.json
@@ -305,6 +305,10 @@
           "active": {
             "value": "0.35",
             "type": "other"
+          },
+          "unchecked": {
+            "value": "0.5",
+            "type": "other"
           }
         },
         "lighten": {
