--- a/tokens/config.json
+++ b/tokens/config.json
@@ -307,8 +307,14 @@
             "type": "other"
           },
           "unchecked": {
-            "value": "0.5",
-            "type": "other"
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.6",
+              "type": "other"
+            }
           }
         },
         "lighten": {
