--- a/tokens/config.json
+++ b/tokens/config.json
@@ -314,6 +314,10 @@
             "hover": {
               "value": "0.5",
               "type": "other"
+            },
+            "active": {
+              "value": "0.6",
+              "type": "other"
             }
           }
         },
