--- a/tokens/application.json
+++ b/tokens/application.json
@@ -694,7 +694,7 @@
             }
           }
         },
-        "danger": {
+        "negative": {
           "bg": {
             "solid": {
               "type": "color",
@@ -852,7 +852,7 @@
             }
           }
         },
-        "warning": {
+        "idle": {
           "bg": {
             "solid": {
               "type": "color",
@@ -888,7 +888,7 @@
             }
           }
         },
-        "success": {
+        "positive": {
           "bg": {
             "solid": {
               "type": "color",
