update toggle avatar and status

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -374,23 +374,23 @@
         },
         "border": {
           "xs": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.xs} *  0.333",
             "type": "dimension"
           },
           "sm": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.sm} *  0.333",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.md} *  0.333",
             "type": "dimension"
           },
           "lg": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.lg} *  0.333",
             "type": "dimension"
           },
           "xl": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.xl} *  0.333",
             "type": "dimension"
           }
         }
